
pandoc-fignos 0.16 (unreleased)

    * Fixed bug for filenames with spaces (Issue #23).
    * Require pandoc-xnos >= 0.4.1.


pandoc-fignos 0.15 (2016-08-21)

    * Support for unnumbered figures in TeX/pdf (Issue #15).
    * Removed anchors and ids in output for unreferenceable figures.


pandoc-fignos 0.14 (2016-05-18)

    * Added figure tags.
    * Changed caption separator from period to colon for html output
      to be consistent with TeX/pdf.


pandoc-fignos 0.13 (2016-05-15)

    * Added clever referencing (Issue #13).
    * Moved library code to pandocxnos project.


pandoc-fignos 0.12 (2016-04-27)

    * Support reference links for pandoc < 1.16 (Issue #14).


pandoc-fignos 0.11 (2016-04-19)

    * Bug fix to allow for attributed (non-figure) images.
    * Better pandoc version detection.


pandoc-fignos 0.10 (2016-04-09)

    * Added figure-name customization (Issue #12).


pandoc-fignos 0.9 (2016-04-05)

    * Fixed broken installation in Win 10 (pandoc-eqnos Issue #6).


pandoc-fignos 0.8.1 (2016-04-02)

    * Fixed hang for Windows users (Issue #11).


pandoc-fignos 0.8 (2016-03-25)

    * Updated to work with pandoc 1.17.
    * Added regression tests.


pandoc-fignos 0.7.6 (2016-01-23)

    * Fixed autolink_bare_uris processing that got accidentally broke.


pandoc-fignos 0.7.5.1 (2016-01-23)

    * Fixed MANIFEST.in which listed wrong files.


pandoc-fignos 0.7.5 (2016-01-22)

    * Attempted Replacement for pypi release that had missing files.


pandoc-fignos 0.7.4 (2016-01-22)

    * Fixed AttributeError bug that occurred for links
      emphasized [*like this*](http://example.com/) (Issue #8).


pandoc-fignos 0.7.3 (2016-01-13)

    * Fixed TypeError bug that occurred with pandoc < 1.16.


pandoc-fignos 0.7, 0.7.1 and 0.7.2 (2016-01-09)

    * Fixed problems when pandoc's autolink_bare_uris is used
      (Issue #6).


pandoc-fignos 0.6 (2016-01-01)

    * Flush stdout before exiting (Issue #5).


pandoc-fignos 0.5 (2015-12-30):
